fix(svg-contrast): Fix issue with insufficient svg contrast for wizard

--- a/src/pages/Integrations/Create/styling/cardselect.scss
+++ b/src/pages/Integrations/Create/styling/cardselect.scss
@@ -1,6 +1,7 @@
 .src-c-wizard__tile {
   width: 100%;
   text-align: center;
+  background-color: var(--pf-t--global--background--color--600);
 
   .pf-v6-c-tile__header,
   .pf-v6-c-tile__body {
